added alternative text to images

--- a/index.html
+++ b/index.html
@@ -38,9 +38,17 @@
       <h1>Advice #<span id="number"></span></h1>
 
       <p id="advice"></p>
-      <img src="./images/pattern-divider-desktop.svg" class="desktop" />
-      <img src="./images/pattern-divider-mobile.svg" class="mobile" />
-      <button class="button"></button>
+      <img
+        src="./images/pattern-divider-desktop.svg"
+        class="desktop"
+        alt="divider"
+      />
+      <img
+        src="./images/pattern-divider-mobile.svg"
+        class="mobile"
+        alt="divider"
+      />
+      <button class="btn"></button>
     </main>
 
     <div class="attribution">
